--- a/doc/ontology_taxonomy.ipynb
+++ b/doc/ontology_taxonomy.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        " Synset('moderate.v.01')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        " Synset('chair.n.05')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        " Lemma('dog.n.01.Canis_familiaris')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,18 +572,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('armchair.n.01'),\n",
+       " Synset('barber_chair.n.01'),\n",
+       " Synset('chair_of_state.n.01'),\n",
+       " Synset('chaise_longue.n.01'),\n",
+       " Synset('eames_chair.n.01'),\n",
+       " Synset('fighting_chair.n.01'),\n",
+       " Synset('folding_chair.n.01'),\n",
+       " Synset('highchair.n.01'),\n",
+       " Synset('ladder-back.n.01'),\n",
+       " Synset('lawn_chair.n.01'),\n",
+       " Synset('rocking_chair.n.01'),\n",
+       " Synset('straight_chair.n.01'),\n",
+       " Synset('swivel_chair.n.01'),\n",
+       " Synset('tablet-armed_chair.n.01'),\n",
+       " Synset('wheelchair.n.01')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chair_0.hyponyms()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('basenji.n.01'),\n",
+       " Synset('corgi.n.01'),\n",
+       " Synset('cur.n.01'),\n",
+       " Synset('dalmatian.n.02'),\n",
+       " Synset('great_pyrenees.n.01'),\n",
+       " Synset('griffon.n.02'),\n",
+       " Synset('hunting_dog.n.01'),\n",
+       " Synset('lapdog.n.01'),\n",
+       " Synset('leonberg.n.01'),\n",
+       " Synset('mexican_hairless.n.01'),\n",
+       " Synset('newfoundland.n.01'),\n",
+       " Synset('pooch.n.01'),\n",
+       " Synset('poodle.n.01'),\n",
+       " Synset('pug.n.01'),\n",
+       " Synset('puppy.n.01'),\n",
+       " Synset('spitz.n.01'),\n",
+       " Synset('toy_dog.n.01'),\n",
+       " Synset('working_dog.n.01')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dog_0.hyponyms()"
    ]
@@ -599,18 +652,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('seat.n.03')]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chair_0.hypernyms()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('canine.n.02'), Synset('domestic_animal.n.01')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dog_0.hypernyms()"
    ]
@@ -624,18 +699,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[Synset('entity.n.01'),\n",
+       "  Synset('physical_entity.n.01'),\n",
+       "  Synset('object.n.01'),\n",
+       "  Synset('whole.n.02'),\n",
+       "  Synset('artifact.n.01'),\n",
+       "  Synset('instrumentality.n.03'),\n",
+       "  Synset('furnishing.n.02'),\n",
+       "  Synset('furniture.n.01'),\n",
+       "  Synset('seat.n.03'),\n",
+       "  Synset('chair.n.01')]]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chair_0.hypernym_paths()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[Synset('entity.n.01'),\n",
+       "  Synset('physical_entity.n.01'),\n",
+       "  Synset('object.n.01'),\n",
+       "  Synset('whole.n.02'),\n",
+       "  Synset('living_thing.n.01'),\n",
+       "  Synset('organism.n.01'),\n",
+       "  Synset('animal.n.01'),\n",
+       "  Synset('chordate.n.01'),\n",
+       "  Synset('vertebrate.n.01'),\n",
+       "  Synset('mammal.n.01'),\n",
+       "  Synset('placental.n.01'),\n",
+       "  Synset('carnivore.n.01'),\n",
+       "  Synset('canine.n.02'),\n",
+       "  Synset('dog.n.01')],\n",
+       " [Synset('entity.n.01'),\n",
+       "  Synset('physical_entity.n.01'),\n",
+       "  Synset('object.n.01'),\n",
+       "  Synset('whole.n.02'),\n",
+       "  Synset('living_thing.n.01'),\n",
+       "  Synset('organism.n.01'),\n",
+       "  Synset('animal.n.01'),\n",
+       "  Synset('domestic_animal.n.01'),\n",
+       "  Synset('dog.n.01')]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dog_0.hypernym_paths()"
    ]
@@ -651,11 +779,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('carnivore.n.01')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dog = wn.synset('dog.n.01')\n",
     "cat = wn.synset('cat.n.01')\n",
@@ -731,9 +870,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PTH: 0.2\n",
+      "LCH: 2.0281482472922856\n",
+      "WUP: 0.8571428571428571\n"
+     ]
+    }
+   ],
    "source": [
     "print('PTH: {}'.format(dog.path_similarity(cat)))\n",
     "print('LCH: {}'.format(dog.lch_similarity(cat)))\n",
@@ -763,9 +912,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('sleep.v.01')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# wn.entailments('snore.v.01')\n",
     "snore_ents = wn.synset('snore.v.01').entailments()\n",
