Update part-of-speech tagging

--- a/doc/part_of_speech_tags.ipynb
+++ b/doc/part_of_speech_tags.ipynb
@@ -16,31 +16,10 @@
     "* [Part-of-Speech Tagset](#Part-of-Speech-Tagset)\n",
     "* [Download Data](#Download-Data)\n",
     "* [Read Data](#Read-Data)\n",
-    "* [Predict Data](#Predict-Data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>table {margin-left: 0 !important;}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# to left-algin the tables below\n",
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>table {margin-left: 0 !important;}</style>\"))"
+    "* [Predict Data](#Predict-Data)\n",
+    "  * [Unigram Model](#Unigram-Model])\n",
+    "  * [Bigram Model](#Bigram-Model])\n",
+    "  * [NLTK Model](#NLTK-Model])"
    ]
   },
   {
@@ -109,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -313,11 +292,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict Data\n",
+    "## Predict Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unigram Model\n",
     "\n",
-    "### Exercise\n",
     "\n",
-    "Write the function `create_uni_pos_dict()` that reads data and returns a dictionary where the key is a word and the value is the list of possible POS tags with probabilities in descending order such that:\n",
+    "Let us write a function `create_uni_pos_dict()` that reads data and returns a dictionary where the key is a word and the value is the list of possible POS tags with probabilities in descending order such that:\n",
     "\n",
     "$$\n",
     "P(p|w) = \\frac{Count(w,p)}{Count(w)}\n",
@@ -326,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +324,16 @@
     "    :return: a dictionary where the key is a word and the value is the list of possible POS tags with probabilities in descending order.\n",
     "    \"\"\"\n",
     "    model = dict()\n",
-    "    # To be updated\n",
+    "\n",
+    "    for sentence in data:\n",
+    "        for word, pos in sentence:\n",
+    "            model.setdefault(word, Counter()).update([pos])\n",
+    "\n",
+    "    for word, counter in model.items():\n",
+    "        ts = counter.most_common()\n",
+    "        total = sum([count for _, count in ts])\n",
+    "        model[word] = [(pos, count/total) for pos, count in ts]\n",
+    "\n",
     "    return model"
    ]
   },
@@ -351,43 +345,315 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Create the unigram dictionary from the training data:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "uni_pos_dict = create_uni_pos_dict(trn_data)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('NN', 0.9714285714285714), ('VB', 0.01904761904761905), ('UH', 0.009523809523809525)]\n",
+      "[('VB', 0.8293216630196937), ('VBP', 0.08971553610503283), ('NN', 0.06564551422319474), ('JJ', 0.015317286652078774)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(uni_pos_dict['man'])\n",
+    "print(uni_pos_dict['buy'])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Use the unigram dictionary to predict POS tags of words in a sentence:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_uni_pos_dict(uni_pos_dict: Dict[str, List[Tuple[str, float]]], tokens: List[str], pprint=False) -> List[Tuple[str, float]]:\n",
+    "    def predict(token):\n",
+    "        t = uni_pos_dict.get(token, None)\n",
+    "        return t[0] if t else ('XX', 0.0)\n",
+    "\n",
+    "    output = [predict(token) for token in tokens]\n",
+    "    if pprint:\n",
+    "        for token, t in zip(tokens, output):\n",
+    "            print('{:<15}{:<8}{:.2f}'.format(token, t[0], t[1]))\n",
+    "\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [Input and Output](https://docs.python.org/3/tutorial/inputoutput.html)\n",
+    "* [`zip()`](https://docs.python.org/3/library/functions.html#zip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I              PRP     0.99\n",
+      "bought         VBD     0.65\n",
+      "a              DT      1.00\n",
+      "car            NN      1.00\n",
+      "yesterday      NN      0.98\n",
+      "that           IN      0.60\n",
+      "was            VBD     1.00\n",
+      "blue           JJ      0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokens = \"I bought a car yesterday that was blue\".split()\n",
+    "predict_uni_pos_dict(uni_pos_dict, tokens, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr.            NNP     1.00\n",
+      "Choi           XX      0.00\n",
+      "has            VBZ     1.00\n",
+      "a              DT      1.00\n",
+      "good           JJ      0.96\n",
+      "wifi           XX      0.00\n",
+      "connection     NN      1.00\n",
+      "from           IN      1.00\n",
+      "Emory          XX      0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokens = \"Dr. Choi has a good wifi connection from Emory\".split()\n",
+    "predict_uni_pos_dict(uni_pos_dict, tokens, True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us write the function `evaluate_uni_pos()` that estimates the accuracy of the unigram model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_uni_pos(uni_pos_dict: Dict[str, List[Tuple[str, float]]], data: List[List[Tuple[str, str]]]):\n",
+    "    total, correct = 0, 0\n",
+    "    for sentence in data:\n",
+    "        tokens, gold = tuple(zip(*sentence))\n",
+    "        pred = [t[0] for t in predict_uni_pos_dict(uni_pos_dict, tokens)]\n",
+    "        total += len(tokens)\n",
+    "        correct += len([1 for g, p in zip(gold, pred) if g == p])\n",
+    "    print('{:5.2f}% ({}/{})'.format(100.0 * correct / total, correct, total))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90.88% (119754/131768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dev_data = read_data(path / 'wsj-pos.dev.gold.tsv')\n",
+    "evaluate_uni_pos(uni_pos_dict, dev_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bigram Model\n",
+    "\n",
+    "#### Exercise\n",
+    "\n",
+    "Write a function `create_bi_pos_dict()` that reads data and returns a dictionary where the key is the previous POS tag and the value is the list of possible POS tags with probabilities in descending order such that:\n",
+    "\n",
+    "$$\n",
+    "P(p|p_{i-1}) = \\frac{Count(p_{i-1}, p_i)}{Count(p_{i-1})}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PREV_DUMMY = '!@#$'\n",
+    "\n",
+    "def create_bi_pos_dict(data: List[List[Tuple[str, str]]]) -> Dict[str, List[Tuple[str, float]]]:\n",
+    "    \"\"\"\n",
+    "    :param data: a list of tuple lists where each inner list represents a sentence and every tuple is a (word, pos) pair.\n",
+    "    :return: a dictionary where the key is the previous POS tag and the value is the list of possible POS tags with probabilities in descending order.\n",
+    "    \"\"\"\n",
+    "    model = dict()\n",
+    "    # To be updated\n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the bigram dictionary from the training data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bi_pos_dict = create_bi_pos_dict(trn_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use both the unigram and bigram dictionaries to predict POS tags of words in a sentence:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_bi_pos_dict(uni_pos_dict: Dict[str, List[Tuple[str, float]]], bi_pos_dict: Dict[str, List[Tuple[str, float]]], tokens: List[str]) -> List[Tuple[str, float]]:\n",
+    "    output = []\n",
+    "    \n",
+    "    for i in range(len(tokens)):\n",
+    "        pos = uni_pos_dict.get(tokens[i], None)\n",
+    "        if pos is None:\n",
+    "            pos = bi_pos_dict.get(output[i-1][0] if i > 0 else PREV_DUMMY, None)\n",
+    "        output.append(pos[0] if pos else ('XX', 0.0))\n",
+    "\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us write the function `evaluate_bi_pos()` that estimates the accuracy of the bigram model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_bi_pos(uni_pos_dict: Dict[str, List[Tuple[str, float]]], bi_pos_dict: Dict[str, List[Tuple[str, float]]], data: List[List[Tuple[str, str]]]):\n",
+    "    total, correct = 0, 0\n",
+    "    for sentence in data:\n",
+    "        tokens, gold = tuple(zip(*sentence))\n",
+    "        pred = [t[0] for t in predict_bi_pos_dict(uni_pos_dict, bi_pos_dict, tokens)]\n",
+    "        total += len(tokens)\n",
+    "        correct += len([1 for g, p in zip(gold, pred) if g == p])\n",
+    "    print('{:5.2f}% ({}/{})'.format(100.0 * correct / total, correct, total))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us write the function `evaluate_bi_pos()` that estimates the accuracy of the unigram + bigram model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_bi_pos(uni_pos_dict: Dict[str, List[Tuple[str, float]]], bi_pos_dict: Dict[str, List[Tuple[str, float]]], data: List[List[Tuple[str, str]]]):\n",
+    "    total, correct = 0, 0\n",
+    "    for sentence in data:\n",
+    "        tokens, gold = tuple(zip(*sentence))\n",
+    "        pred = [t[0] for t in predict_bi_pos_dict(uni_pos_dict, bi_pos_dict, tokens)]\n",
+    "        total += len(tokens)\n",
+    "        correct += len([1 for g, p in zip(gold, pred) if g == p])\n",
+    "    print('{:5.2f}% ({}/{})'.format(100.0 * correct / total, correct, total))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92.01% (121234/131768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate_bi_pos(uni_pos_dict, bi_pos_dict, dev_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NLTK Model\n",
+    "\n",
     "NLTK provides a POS tagger that takes a list of tokens and predicts the POS tags of those tokens:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +690,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -473,13 +739,53 @@
        " ('.', '.')]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nltk.pos_tag(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us write the function `evaluate_nltk_pos()` that estimates the accuracy of the NLTK model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_nltk(data: List[List[Tuple[str, str]]]):\n",
+    "    total, correct = 0, 0\n",
+    "    for sentence in data:\n",
+    "        tokens, gold = tuple(zip(*sentence))\n",
+    "        pred = [pos for token, pos in nltk.pos_tag(tokens)]\n",
+    "        total += len(tokens)\n",
+    "        correct += len([1 for g, p in zip(gold, pred) if g == p])\n",
+    "    print('{:5.2f}% ({}/{})'.format(100.0 * correct / total, correct, total))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96.14% (126685/131768)\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate_nltk(dev_data)"
    ]
   }
  ],
