Update quiz2 Update quiz2.md

--- a/doc/part_of_speech_tags.ipynb
+++ b/doc/part_of_speech_tags.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,6 +342,31 @@
    "metadata": {},
    "source": [
     "* [`collections.Counter`](https://docs.python.org/3/library/collections.html#collections.Counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'A': 2, 'C': 2, 'B': 1})\n",
+      "Counter({'C': 3, 'A': 2, 'B': 1})\n",
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Counter()\n",
+    "c.update(['A', 'B', 'A', 'C', 'C'])\n",
+    "print(c)\n",
+    "c.update('C')\n",
+    "print(c)\n",
+    "l = [count for _, count in c.most_common()]\n",
+    "print(l)"
    ]
   },
   {
