Update schedule. Update quiz2.md

--- a/doc/ontology_taxonomy.ipynb
+++ b/doc/ontology_taxonomy.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nltk in /Users/jdchoi/workspace/cs329/venv/lib/python3.9/site-packages (3.5)\n",
+      "Requirement already satisfied: click in /Users/jdchoi/workspace/cs329/venv/lib/python3.9/site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: joblib in /Users/jdchoi/workspace/cs329/venv/lib/python3.9/site-packages (from nltk) (1.0.0)\n",
+      "Requirement already satisfied: regex in /Users/jdchoi/workspace/cs329/venv/lib/python3.9/site-packages (from nltk) (2020.11.13)\n",
+      "Requirement already satisfied: tqdm in /Users/jdchoi/workspace/cs329/venv/lib/python3.9/site-packages (from nltk) (4.56.0)\n",
+      "\u001b[33mWARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
+      "You should consider upgrading via the '/Users/jdchoi/workspace/cs329/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -141,12 +154,13 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "!pip install nltk\n",
     "import nltk\n",
     "nltk.download('wordnet')"
    ]
